# security-threat-analyzer

./: .env.example  .gitignore  EVALUATION_REPORT.md  FINAL_EVALUATION_SUMMARY.md  README.md  app.py  build_vectordb_real.py  check_ollama.py  create_embeddings_real.py  evaluate_system.py  explore_real_data.py  prepare_data.py  pyproject.toml  quick_test.py  rag_chain_real.py  requirements.txt  start_ollama_cpu.bat  test_setup.py  verify_data.py
deploy/: create_service.sh  oracle_setup.sh
src/security_analyzer/: __init__.py  __main__.py  agent.py  cli.py  config.py  data.py  embeddings.py  evaluate.py  llm.py  rag.py  vectorstore.py
